--- a/shop.html
+++ b/shop.html
@@ -150,7 +150,7 @@
                                         <div class="sale">Sale</div>
                                     </div>
                                     <div class="pi-text">
-                                        <a href="#">
+                                        <a href="./product.html">
                                             <h5>Pure Pineapple</h5>
                                         </a>
                                         <div class="product-price">
