--- a/MatteNailsProduct.html
+++ b/MatteNailsProduct.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Lashae Glamour, nails, luxury">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ready to Ship | Lashae Glamour</title>
+    <title>Matte Nails | Lashae Glamour</title>
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -63,11 +63,13 @@
                     </div>
 
                     <div class="col-lg-7 col-md-7">
+                        <!-- Search button for SNIPCART -->
                         <div id="my-search-60464127"></div>
                         <div>
                         <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=code&data_date=2021-09-21" charset="utf-8"></script>
                         <script type="text/javascript"> xSearch("id=my-search-60464127"); </script>
                         </div>
+                        <!-- Search button for SNIPCART -->
                     </div>
 
                     <div class="col-lg-3 text-right col-md-3">
@@ -101,9 +103,9 @@
                 </div>
                 <nav class="nav-menu mobile-menu">
                     <ul>
-                        <li><a href="./index.html">Made to Order</a></li>
-                        <li><a href="./shop.html">Ready to Ship</a></li>
-                        <li><a href="">Custom Orders</a></li>
+                        <li><a href="./MadeToOrder.html">Made to Order</a></li>
+                        <li><a href="./ReadyToShip.html">Ready to Ship</a></li>
+                        <li><a href="CustomOrders.html">Custom Orders</a></li>
                         <li><a href="./faq.html">FAQ</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                             </ul>
@@ -121,9 +123,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="breadcrumb-text">
-                        <a href="#"><i class="fa fa-home"></i> Home</a>
-                        <span>Ready to Ship</span>
+                    <div class="breadcrumb-text product-more">
+                        <a href="./home.html"><i class="fa fa-home"></i> Home</a>
+                        <a href="./ReadyToShip.html">Ready to Ship</a>
+                        <span>Matte Nails</span>
                     </div>
                 </div>
             </div>
@@ -132,162 +135,54 @@
     <!-- Breadcrumb Section Begin -->
 
     <!-- Product Shop Section Begin -->
-    <section class="product-shop spad">
+    <section class="product-shop spad page-details">
         <div class="container">
             <div class="row">
-                <!-- <div class="col-lg-3 col-md-6 col-sm-8 order-2 order-lg-1 produts-sidebar-filter">
-                    <div class="filter-widget">
-                        <h4 class="fw-title">Categories</h4>
-                </div>
-                <div class="col-lg-9 order-1 order-lg-2"> For later use-->
-
-                    <div class="product-list">
-                        <div class="row">
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-1.jpg" alt="">
-                                        <div class="sale">Sale</div>
-                                    </div>
-                                    <div class="pi-text">
-                                        <a href="./product.html">
-                                            <h5>Pure Pineapple</h5>
-                                        </a>
-                                        <div class="product-price">
-                                            £23.99
-                                            <!-- <span>$35.00</span> For future use-->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-2.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                        <a href="#">
-                                            <h5>Guangzhou sweater</h5>
-                                        </a>
-                                        <div class="product-price">
-                                            £23.99
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-3.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                        <a href="#">
-                                            <h5>Guangzhou sweater</h5>
-                                        </a>
-                                        <div class="product-price">
-                                            £23.99
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-4.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                        <a href="#">
-                                            <h5>Microfiber Wool Scarf</h5>
-                                        </a>
-                                        <div class="product-price">
-                                            £24.99
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-5.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                        <a href="#">
-                                            <h5>Men's Painted Hat</h5>
-                                        </a>
-                                        <div class="product-price">
-                                            £25.99
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-6.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                        <a href="#">
-                                            <h5>Converse Shoes</h5>
-                                        </a>
-                                        <div class="product-price">
-                                            £24.99
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-7.jpg" alt="">
-                                        <div class="sale">Sale</div>
-                                    </div>
-                                    <div class="pi-text">
-                                        <a href="#">
-                                            <h5>Pure Pineapple</h5>
-                                        </a>
-                                        <div class="product-price">
-                                            £23.99
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-8.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                        <a href="#">
-                                            <h5>2 Layer Windbreaker</h5>
-                                        </a>
-                                        <div class="product-price">
-                                            £23.99
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-9.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                        <a href="#">
-                                            <h5>Converse Shoes</h5>
-                                        </a>
-                                        <div class="product-price">
-                                            £24.99
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                <div class="col-lg-10">
+                    <!-- Ecwid Store -->
+                    <div id="my-store-60464127"></div>
+                    <div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=code&data_date=2021-10-15" charset="utf-8"></script>
+                        <script type="text/javascript"> 
+                            window.ec=window.ec||{}; 
+                            window.ec.storefront=window.ec.storefront||{}; 
+                            window.ec.storefront.enable_navigation=true;
+                            window.ec.storefront.product_details_layout="TWO_COLUMNS_SIDEBAR_ON_THE_RIGHT";
+                            window.ec.storefront.product_details_gallery_layout="IMAGE_SINGLE_THUMBNAILS_VERTICAL";
+                            window.ec.storefront.product_details_two_columns_with_right_sidebar_show_product_description_on_sidebar=true;
+                            window.ec.storefront.product_details_two_columns_with_left_sidebar_show_product_description_on_sidebar=false;
+                            window.ec.storefront.product_details_show_product_name=true;
+                            window.ec.storefront.product_details_show_breadcrumbs=false;
+                            window.ec.storefront.product_details_show_product_sku=false;
+                            window.ec.storefront.product_details_show_product_price=true;
+                            window.ec.storefront.product_details_show_in_stock_label=true;
+                            window.ec.storefront.product_details_show_number_of_items_in_stock=false;
+                            window.ec.storefront.product_details_show_qty=true;
+                            window.ec.storefront.product_details_show_wholesale_prices=false;
+                            window.ec.storefront.product_details_show_product_options=true;
+                            window.ec.storefront.product_details_show_product_description=true;
+                            window.ec.storefront.product_details_show_share_buttons=false;
+                            window.ec.storefront.product_details_position_product_name=100;
+                            window.ec.storefront.product_details_position_breadcrumbs=600;
+                            window.ec.storefront.product_details_position_product_sku=700;
+                            window.ec.storefront.product_details_position_product_price=200;
+                            window.ec.storefront.product_details_position_product_options=undefined;
+                            window.ec.storefront.product_details_position_buy_button=400;
+                            window.ec.storefront.product_details_position_wholesale_prices=800;
+                            window.ec.storefront.product_details_position_product_description=300;
+                            window.ec.storefront.product_details_position_share_buttons=900;
+                            window.ec.storefront.product_details_position_subtitle=500;
+                            window.ec.storefront.product_details_show_subtitle=true;
+                            xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","defaultProductId=354545423","id=my-store-60464127");
+                        </script>
                     </div>
+                    <!-- Ecwid Store END-->
                 </div>
             </div>
         </div>
     </section>
     <!-- Product Shop Section End -->
+
+
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
