--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Lashae Glamour, nails, luxury">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Press on Nails | Lashae Glamour</title>
+    <title>Ready to Ship | Lashae Glamour</title>
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -101,9 +101,9 @@
                 </div>
                 <nav class="nav-menu mobile-menu">
                     <ul>
-                        <li><a href="./index.html">Made to Order</a></li>
-                        <li><a href="./shop.html">Ready to Ship</a></li>
-                        <li><a href="">Custom Orders</a></li>
+                        <li><a href="./MadeToOrder.html">Made to Order</a></li>
+                        <li><a href="./ReadyToShip.html">Ready to Ship</a></li>
+                        <li><a href="CustomOrders.html">Custom Orders</a></li>
                         <li><a href="./faq.html">FAQ</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                             </ul>
