--- a/ProductBedazzledNails.html
+++ b/ProductBedazzledNails.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Lashae Glamour, nails, luxury">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ready to Ship | Lashae Glamour</title>
+    <title>Bedazzled Nails | Lashae Glamour</title>
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -121,9 +121,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="breadcrumb-text">
-                        <a href="index.html"><i class="fa fa-home"></i> Home</a>
-                        <span>Made to Order</span>
+                    <div class="breadcrumb-text product-more">
+                        <a href="./home.html"><i class="fa fa-home"></i> Home</a>
+                        <a href="./ReadyToShip.html">Made to Order</a>
+                        <span>Bedazzled Nails</span>
                     </div>
                 </div>
             </div>
@@ -132,162 +133,54 @@
     <!-- Breadcrumb Section Begin -->
 
     <!-- Product Shop Section Begin -->
-    <section class="product-shop spad">
+    <section class="product-shop spad page-details">
         <div class="container">
             <div class="row">
-                <!-- <div class="col-lg-3 col-md-6 col-sm-8 order-2 order-lg-1 produts-sidebar-filter">
-                    <div class="filter-widget">
-                        <h4 class="fw-title">Categories</h4>
-                </div>
-                <div class="col-lg-9 order-1 order-lg-2"> For later use-->
-
-                    <div class="product-list">
-                        <div class="row">
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <a href="./ProductAkarui.html">
-                                    <div class="pi-pic">
-                                        <img src="img/product-akarui.jpg" alt="">
-                                        <!--<div class="sale">Sale</div> -->
-                                    </div>
-                                    <div class="pi-text">
-                                            <h5>Akarui</h5>
-                                        <div class="product-price">
-                                            £24.99
-                                            <!-- <span>$35.00</span> For future use-->
-                                        </div>
-                                    </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <a href="./ProductBedazzledNails.html">
-                                    <div class="pi-pic">
-                                        <img src="img/product-bedazzlednails.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                            <h5>Bedazzled Nails</h5>
-                                        <div class="product-price">
-                                            £26.99
-                                        </div>
-                                    </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <a href="./ProductMarch.html">
-                                    <div class="pi-pic">
-                                        <img src="img/product-march.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                            <h5>March</h5>
-                                        <div class="product-price">
-                                            £24.99
-                                        </div>
-                                    </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <a href="./product.html">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-4.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                            <h5>Microfiber Wool Scarf</h5>
-                                        <div class="product-price">
-                                            £24.99
-                                        </div>
-                                    </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <a href="./product.html">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-5.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                            <h5>Men's Painted Hat</h5>
-                                        <div class="product-price">
-                                            £25.99
-                                        </div>
-                                    </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <a href="./product.html">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-6.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                            <h5>Converse Shoes</h5>
-                                        <div class="product-price">
-                                            £24.99
-                                        </div>
-                                    </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <a href="./product.html">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-7.jpg" alt="">
-                                        <div class="sale">Sale</div>
-                                    </div>
-                                    <div class="pi-text">
-                                            <h5>Pure Pineapple</h5>
-                                        <div class="product-price">
-                                            £23.99
-                                        </div>
-                                    </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <a href="./product.html">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-8.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                            <h5>2 Layer Windbreaker</h5>
-                                        <div class="product-price">
-                                            £23.99
-                                        </div>
-                                    </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <div class="product-item">
-                                    <a href="./product.html">
-                                    <div class="pi-pic">
-                                        <img src="img/products/product-9.jpg" alt="">
-                                    </div>
-                                    <div class="pi-text">
-                                            <h5>Converse Shoes</h5>
-                                        <div class="product-price">
-                                            £24.99
-                                        </div>
-                                    </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+                <div class="col-lg-10">
+                    <!-- Ecwid Store -->
+                    <div id="my-store-60464127"></div>
+                        <div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=code&data_date=2021-12-10" charset="utf-8"></script>
+                        <script type="text/javascript"> 
+                        window.ec=window.ec||{}; 
+                        window.ec.storefront=window.ec.storefront||{}; 
+                        window.ec.storefront.enable_navigation=true;
+                        window.ec.storefront.product_details_layout="TWO_COLUMNS_SIDEBAR_ON_THE_RIGHT";
+                        window.ec.storefront.product_details_gallery_layout="IMAGE_SINGLE_THUMBNAILS_VERTICAL";
+                        window.ec.storefront.product_details_two_columns_with_right_sidebar_show_product_description_on_sidebar=true;
+                        window.ec.storefront.product_details_two_columns_with_left_sidebar_show_product_description_on_sidebar=false;
+                        window.ec.storefront.product_details_show_product_name=true;
+                        window.ec.storefront.product_details_show_breadcrumbs=false;
+                        window.ec.storefront.product_details_show_product_sku=false;
+                        window.ec.storefront.product_details_show_product_price=true;
+                        window.ec.storefront.product_details_show_in_stock_label=true;
+                        window.ec.storefront.product_details_show_number_of_items_in_stock=false;
+                        window.ec.storefront.product_details_show_qty=true;
+                        window.ec.storefront.product_details_show_wholesale_prices=false;
+                        window.ec.storefront.product_details_show_product_options=true;
+                        window.ec.storefront.product_details_show_product_description=true;
+                        window.ec.storefront.product_details_show_share_buttons=false;
+                        window.ec.storefront.product_details_position_product_name=100;
+                        window.ec.storefront.product_details_position_breadcrumbs=400;
+                        window.ec.storefront.product_details_position_product_sku=300;
+                        window.ec.storefront.product_details_position_product_price=200;
+                        window.ec.storefront.product_details_position_product_options=undefined;
+                        window.ec.storefront.product_details_position_buy_button=600;
+                        window.ec.storefront.product_details_position_wholesale_prices=700;
+                        window.ec.storefront.product_details_position_product_description=900;
+                        window.ec.storefront.product_details_position_share_buttons=800;
+                        window.ec.storefront.product_details_position_subtitle=500;
+                        window.ec.storefront.product_details_show_subtitle=true;
+                        xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","defaultProductId=354545424","id=my-store-60464127");
+                        </script>
                     </div>
+                    <!-- Ecwid Store END-->
                 </div>
             </div>
         </div>
     </section>
     <!-- Product Shop Section End -->
+
+
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
