--- a/ReadyToShip.html
+++ b/ReadyToShip.html
@@ -92,17 +92,17 @@
                         <i class="ti-menu"></i>
                         <span>Categories</span>
                         <ul class="depart-hover">
-                            <li><a href="./shop.html">Lashae Essentials</a></li>
-                            <li><a href="./shop.html">Glitz & Glam</a></li>
-                            <li><a href="./shop.html">LG Luxxe</a></li>
+                            <li><a href="#">Lashae Essentials</a></li>
+                            <li><a href="#">Glitz & Glam</a></li>
+                            <li><a href="#">LG Luxxe</a></li>
 
                         </ul>
                     </div>
                 </div>
                 <nav class="nav-menu mobile-menu">
                     <ul>
-                        <li><a href="./MadeToOrder.html">Made to Order</a></li>
                         <li><a href="./ReadyToShip.html">Ready to Ship</a></li>
+                        <li><a href="./MadeToOrder.html">Made to Order</a></li>
                         <li><a href="CustomOrders.html">Custom Orders</a></li>
                         <li><a href="./faq.html">FAQ</a></li>
                         <li><a href="./contact.html">Contact</a></li>
@@ -145,7 +145,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./MatteNailsProduct.html">
+                                    <a href="./ProductMatteNails.html">
                                     <div class="pi-pic">
                                         <img src="img/products/product-1.jpg" alt="">
                                         <div class="sale">Sale</div>
@@ -162,12 +162,13 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./product.html">
+                                    <a href="./ProductSolidColourNails.html">
                                     <div class="pi-pic">
                                         <img src="img/products/product-2.jpg" alt="">
+                                        <div class="sale">Sale</div>
                                     </div>
                                     <div class="pi-text">
-                                            <h5>Guangzhou sweater</h5>
+                                            <h5>Solid Colour Nails</h5>
                                         <div class="product-price">
                                             £23.99
                                         </div>
@@ -177,12 +178,13 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./product.html">
+                                    <a href="./ProductFrenchNails.html">
                                     <div class="pi-pic">
                                         <img src="img/products/product-3.jpg" alt="">
+                                        <div class="sale">Sale</div>
                                     </div>
                                     <div class="pi-text">
-                                            <h5>Guangzhou sweater</h5>
+                                            <h5>French Nails</h5>
                                         <div class="product-price">
                                             £23.99
                                         </div>
@@ -192,12 +194,12 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./product.html">
+                                    <a href="./ProductMintGreen.html">
                                     <div class="pi-pic">
-                                        <img src="img/products/product-4.jpg" alt="">
+                                        <img src="img/product-MintGreen.jpg" alt="">
                                     </div>
                                     <div class="pi-text">
-                                            <h5>Microfiber Wool Scarf</h5>
+                                            <h5>Mint Green</h5>
                                         <div class="product-price">
                                             £24.99
                                         </div>
@@ -240,7 +242,6 @@
                                     <a href="./product.html">
                                     <div class="pi-pic">
                                         <img src="img/products/product-7.jpg" alt="">
-                                        <div class="sale">Sale</div>
                                     </div>
                                     <div class="pi-text">
                                             <h5>Pure Pineapple</h5>
