--- a/ProductMatteNails.html
+++ b/ProductMatteNails.html
@@ -63,13 +63,11 @@
                     </div>
 
                     <div class="col-lg-7 col-md-7">
-                        <!-- Search button for SNIPCART -->
                         <div id="my-search-60464127"></div>
                         <div>
                         <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=code&data_date=2021-09-21" charset="utf-8"></script>
                         <script type="text/javascript"> xSearch("id=my-search-60464127"); </script>
                         </div>
-                        <!-- Search button for SNIPCART -->
                     </div>
 
                     <div class="col-lg-3 text-right col-md-3">
@@ -94,17 +92,17 @@
                         <i class="ti-menu"></i>
                         <span>Categories</span>
                         <ul class="depart-hover">
-                            <li><a href="./shop.html">Lashae Essentials</a></li>
-                            <li><a href="./shop.html">Glitz & Glam</a></li>
-                            <li><a href="./shop.html">LG Luxxe</a></li>
+                            <li><a href="#">Lashae Essentials</a></li>
+                            <li><a href="#">Glitz & Glam</a></li>
+                            <li><a href="#">LG Luxxe</a></li>
 
                         </ul>
                     </div>
                 </div>
                 <nav class="nav-menu mobile-menu">
                     <ul>
-                        <li><a href="./MadeToOrder.html">Made to Order</a></li>
                         <li><a href="./ReadyToShip.html">Ready to Ship</a></li>
+                        <li><a href="./MadeToOrder.html">Made to Order</a></li>
                         <li><a href="CustomOrders.html">Custom Orders</a></li>
                         <li><a href="./faq.html">FAQ</a></li>
                         <li><a href="./contact.html">Contact</a></li>
@@ -141,38 +139,38 @@
                 <div class="col-lg-10">
                     <!-- Ecwid Store -->
                     <div id="my-store-60464127"></div>
-                    <div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=code&data_date=2021-10-15" charset="utf-8"></script>
+                        <div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=code&data_date=2021-12-10" charset="utf-8"></script>
                         <script type="text/javascript"> 
-                            window.ec=window.ec||{}; 
-                            window.ec.storefront=window.ec.storefront||{}; 
-                            window.ec.storefront.enable_navigation=true;
-                            window.ec.storefront.product_details_layout="TWO_COLUMNS_SIDEBAR_ON_THE_RIGHT";
-                            window.ec.storefront.product_details_gallery_layout="IMAGE_SINGLE_THUMBNAILS_VERTICAL";
-                            window.ec.storefront.product_details_two_columns_with_right_sidebar_show_product_description_on_sidebar=true;
-                            window.ec.storefront.product_details_two_columns_with_left_sidebar_show_product_description_on_sidebar=false;
-                            window.ec.storefront.product_details_show_product_name=true;
-                            window.ec.storefront.product_details_show_breadcrumbs=false;
-                            window.ec.storefront.product_details_show_product_sku=false;
-                            window.ec.storefront.product_details_show_product_price=true;
-                            window.ec.storefront.product_details_show_in_stock_label=true;
-                            window.ec.storefront.product_details_show_number_of_items_in_stock=false;
-                            window.ec.storefront.product_details_show_qty=true;
-                            window.ec.storefront.product_details_show_wholesale_prices=false;
-                            window.ec.storefront.product_details_show_product_options=true;
-                            window.ec.storefront.product_details_show_product_description=true;
-                            window.ec.storefront.product_details_show_share_buttons=false;
-                            window.ec.storefront.product_details_position_product_name=100;
-                            window.ec.storefront.product_details_position_breadcrumbs=600;
-                            window.ec.storefront.product_details_position_product_sku=700;
-                            window.ec.storefront.product_details_position_product_price=200;
-                            window.ec.storefront.product_details_position_product_options=undefined;
-                            window.ec.storefront.product_details_position_buy_button=400;
-                            window.ec.storefront.product_details_position_wholesale_prices=800;
-                            window.ec.storefront.product_details_position_product_description=300;
-                            window.ec.storefront.product_details_position_share_buttons=900;
-                            window.ec.storefront.product_details_position_subtitle=500;
-                            window.ec.storefront.product_details_show_subtitle=true;
-                            xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","defaultProductId=354545423","id=my-store-60464127");
+                        window.ec=window.ec||{}; 
+                        window.ec.storefront=window.ec.storefront||{}; 
+                        window.ec.storefront.enable_navigation=true;
+                        window.ec.storefront.product_details_layout="TWO_COLUMNS_SIDEBAR_ON_THE_RIGHT";
+                        window.ec.storefront.product_details_gallery_layout="IMAGE_SINGLE_THUMBNAILS_VERTICAL";
+                        window.ec.storefront.product_details_two_columns_with_right_sidebar_show_product_description_on_sidebar=true;
+                        window.ec.storefront.product_details_two_columns_with_left_sidebar_show_product_description_on_sidebar=false;
+                        window.ec.storefront.product_details_show_product_name=true;
+                        window.ec.storefront.product_details_show_breadcrumbs=false;
+                        window.ec.storefront.product_details_show_product_sku=false;
+                        window.ec.storefront.product_details_show_product_price=true;
+                        window.ec.storefront.product_details_show_in_stock_label=true;
+                        window.ec.storefront.product_details_show_number_of_items_in_stock=false;
+                        window.ec.storefront.product_details_show_qty=true;
+                        window.ec.storefront.product_details_show_wholesale_prices=false;
+                        window.ec.storefront.product_details_show_product_options=true;
+                        window.ec.storefront.product_details_show_product_description=true;
+                        window.ec.storefront.product_details_show_share_buttons=false;
+                        window.ec.storefront.product_details_position_product_name=100;
+                        window.ec.storefront.product_details_position_breadcrumbs=400;
+                        window.ec.storefront.product_details_position_product_sku=300;
+                        window.ec.storefront.product_details_position_product_price=200;
+                        window.ec.storefront.product_details_position_product_options=undefined;
+                        window.ec.storefront.product_details_position_buy_button=600;
+                        window.ec.storefront.product_details_position_wholesale_prices=700;
+                        window.ec.storefront.product_details_position_product_description=900;
+                        window.ec.storefront.product_details_position_share_buttons=800;
+                        window.ec.storefront.product_details_position_subtitle=500;
+                        window.ec.storefront.product_details_show_subtitle=true;
+                        xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","defaultProductId=354545423","id=my-store-60464127");
                         </script>
                     </div>
                     <!-- Ecwid Store END-->
